tests/negative-fixtures/banned_rand_entry_points/src/lib.rs
pub fn ambient_randomness() -> u8 {
    let _rng = rand::rng();
    rand::random::<u8>()
}
